--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/marketplace
-    username: postgres
-    password: admin123
+    username: <yourusername>
+    password: <yourpassword>
   jpa:
     hibernate:
       ddl-auto: update   # 自动建表 (create / update / validate / none)
