--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,12 +3,11 @@ spring:
     url: jdbc:postgresql://localhost:5432/marketplace
     username: <yourusername>
     password: <yourpassword>
-  jpa:
-    hibernate:
-      ddl-auto: update   # 自动建表 (create / update / validate / none)
-    show-sql: true        # 控制台显示 SQL
-    properties:
-      hibernate:
-        format_sql: true  # SQL 美化输出
+
+logging:
+  level:
+    com.laioffer.flagcamp.backend: DEBUG
+    org.springframework.jdbc.core: DEBUG
+
   server:
     port: 8080
