--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,14 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/marketplace
-    username: laioffer
-    password: laioffer
-  sql:
-    init:
-      mode: always
-      schema-locations: classpath:schema.sql
-      data-locations: classpath:data.sql
-      continue-on-error: true
+    username: postgres
+    password: <your_password>
 
 logging:
   level:
@@ -16,5 +10,6 @@ logging:
     org.springframework.jdbc.core: TRACE        
     org.springframework.data.jdbc: TRACE        
     org.springframework.jdbc.support: TRACE
+
 server:
   port: 8080
